# poe-profit-calc

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: fly-deploy.yml
api/: .gitignore  README.md  fly.toml  pyproject.toml
api/poe_profit_calc/: bosses.py  fetcher.py  items.py  main.py  prices.py  sourcemappings.py  sources.py
api/poe_profit_calc/bossing/: bosses.py  bossitems.py
api/poe_profit_calc/gemlevelling/: __init__.py  gems.py  gemxp.py
api/poe_profit_calc/harvest/: __init__.py  lifeforce.py  orbs.py
api/poe_profit_calc/routers/: bosses.py  gems.py  harvest.py
api/poe_profit_calc/setup/: logger.py  ratelimiting.py  settings.py  setup.py
api/poe_profit_calc/static/: itemoverview_deliriumorb.json  itemoverview_divinationcard.json  itemoverview_uniqueaccessory.json  itemoverview_uniquearmour.json  itemoverview_uniqueflask.json
api/poe_profit_calc/utils/: __init__.py  utils.py
api/tests/: test_prices.py
api/tests/gemlevelling/: test_gems.py
api/tests/gemlevelling/data/: itemoverview_skillgem.json
api/tests/harvest/: test_orbs.py
api/tests/harvest/data/: itemoverview_deliriumorb.json
client/: .env.example  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
client/src/: env.js  middleware.ts
poe_profit_calc/: bosses.py  fetcher.py  globals.py  items.py  main.py  prices.py  sourcemappings.py  tradelink.py
poe_profit_calc/gemlevelling/: gems.py
poe_profit_calc/setup/: ratelimiting.py  (+1 more)
tests/: test_prices.py  test_utils.py
(+39 files in other folders)
