[tool.poetry]
name = "poe-profit-calc"
version = "0.1.0"
description = ""
authors = ["Johan Selin <johanselin99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
pytest = "^8.2.2"
fastapi = {extras = ["standard"], version = "^0.114.0"}
requests = "^2.32.3"
cachetools = "^5.5.0"
msgspec = "^0.18.6"
pydantic-settings = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = "."