[tool.poetry]
name = "poe-profit-calc"
version = "0.1.0"
description = ""
authors = ["Johan Selin <johanselin99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.0"}
requests = "^2.32.3"
cachetools = "^5.5.0"
msgspec = "^0.18.6"
pydantic-settings = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[tool.poetry.group.bin]
optional = true

[tool.poetry.group.bin.dependencies]
beautifulsoup4 = "^4.12.3"
opencv-python = "^4.10.0.84"
numpy = "^2.1.1"
mss = "^9.0.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = "."